# EGE-helper

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml  validate-seed.yml
scripts/: dump-seed.sh  release-seed.sh
src/api/: auth.py  config.py  deps.py  main.py  repository.py  routes.py  schemas.py  security.py
src/api/routers/: attempts.py  auth.py  catalog.py  checking.py  me.py  meta.py  problems.py
src/api/seeds/: blueprints.py  scoring_rules.py
src/api/services/: answer_check.py  scoring.py
src/bot/: catalog.py  config.py  logging_config.py  main.py  middlewares.py  screens.py  texts.py
src/bot/db/: models.py  postgres.py  redis_client.py
src/bot/handlers/: __init__.py  menu.py  onboarding.py  reset.py  resume.py  start.py
src/bot/keyboards/: menu.py  onboarding.py
src/bot/services/: users.py
src/bot/utils/: dates.py  names.py  progress.py
src/devops/: app.py  docker.py  stats.py  terminal.py
src/parser/: catalog.py  client.py  config.py  main.py  progress.py  repository.py  seed.py  service.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_attempts.py  test_api_auth.py  test_api_catalog.py  test_api_checking.py  test_api_endpoints.py  test_api_meta.py  test_api_problems.py  test_parser_repository.py  test_seed_import.py
tests/unit/: test_bot_utils.py  test_parser_catalog.py  test_parser_client_retry.py  test_parser_collect_ids.py  test_parser_normalize.py
