[project]
name = "ege-helper-bot"
version = "0.1.0"
description = "Telegram-бот помощник для подготовки к ЕГЭ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram",
  "redis>=5.0.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
