[project]
name = "ege-helper-bot"
version = "0.1.0"
description = "Telegram-бот помощник для подготовки к ЕГЭ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram",
  "redis>=5.0.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
  "sdamgia-api @ https://github.com/anijackich/sdamgia-api/archive/refs/heads/master.tar.gz"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
